Header set hotspot sets background rather than border.
Setting the border would, on some browsers, leave corruption around the table as the mouse moved in and out of cells. Setting the
background is more reliable (if less than optimal).

--- a/templates/default/site.css
+++ b/templates/default/site.css
@@ -14,14 +14,14 @@ body  {
     text-align: left; /* this overrides the text-align: center on the body element. */
     padding: 10px 20px 10px 20px;
     min-width: 1024px;
-} 
+}
 
 .excel2table #header {
-    padding: 0px; 
+    padding: 0px;
     /*background-image: url(images/forge_title_mid.jpg);
     background-repeat: repeat-x;*/
     text-align: left;
-} 
+}
 
 .excel2table #header h1 {
     margin: 0;
@@ -40,7 +40,7 @@ body  {
 
 .excel2table #footer {
     padding: 0 10px;
-} 
+}
 
 .excel2table #footer p {
     margin: 0;
@@ -473,7 +473,7 @@ hr {
 }
 
 #preview td.markpos {
-    border: 1px solid #FF0000 !important;
+    background-color: #d5fcdc !important;
 }
 
 #preview td.ishead {
